testsuite/tests/rts/ghc-debug/shouldfail/all.T
test('unsafe_rts_pause', [exit_code(1)], compile_and_run, ['-threaded '])